// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render an aggregation selection for duration reports 1`] = `
<Popover
  className="AggregationType"
  renderInPortal="AggregationType"
  title={
    <React.Fragment>
      <span
        className="content"
      >
        Med
      </span>
      <Icon
        className="editIcon"
        type="edit-small"
      />
    </React.Fragment>
  }
>
  <Form
    compact={true}
  >
    <h4>
      Duration aggregations
    </h4>
    <fieldset>
      <div
        key="sum"
      >
        <Tooltip>
          <span>
            <Switch
              checked={false}
              disabled={false}
              label="Sum"
              onChange={[Function]}
            />
          </span>
        </Tooltip>
      </div>
      <div
        key="min"
      >
        <Tooltip>
          <span>
            <Switch
              checked={false}
              disabled={false}
              label="Minimum"
              onChange={[Function]}
            />
          </span>
        </Tooltip>
      </div>
      <div
        key="avg"
      >
        <Tooltip>
          <span>
            <Switch
              checked={false}
              disabled={false}
              label="Average"
              onChange={[Function]}
            />
          </span>
        </Tooltip>
      </div>
      <div
        key="median"
      >
        <Tooltip>
          <span>
            <Switch
              checked={true}
              disabled={true}
              label="Median"
              onChange={[Function]}
            />
          </span>
        </Tooltip>
      </div>
      <div
        key="max"
      >
        <Tooltip>
          <span>
            <Switch
              checked={false}
              disabled={false}
              label="Maximum"
              onChange={[Function]}
            />
          </span>
        </Tooltip>
      </div>
    </fieldset>
  </Form>
</Popover>
`;

exports[`should render an user task duration selection for user task duration reports 1`] = `
<Popover
  className="AggregationType"
  renderInPortal="AggregationType"
  title={
    <React.Fragment>
      <span
        className="content"
      >
        Med
      </span>
      <Icon
        className="editIcon"
        type="edit-small"
      />
    </React.Fragment>
  }
>
  <Form
    compact={true}
  >
    <h4>
      User Task Duration
    </h4>
    <fieldset>
      <div
        key="total"
      >
        <span>
          <Switch
            checked={false}
            disabled={false}
            label="Total"
            onChange={[Function]}
          />
        </span>
      </div>
      <div
        key="work"
      >
        <span>
          <Switch
            checked={false}
            disabled={false}
            label="Work"
            onChange={[Function]}
          />
        </span>
      </div>
      <div
        key="idle"
      >
        <span>
          <Switch
            checked={true}
            disabled={true}
            label="Idle"
            onChange={[Function]}
          />
        </span>
      </div>
    </fieldset>
    <h4>
      Duration aggregations
    </h4>
    <fieldset>
      <div
        key="sum"
      >
        <Tooltip>
          <span>
            <Switch
              checked={false}
              disabled={false}
              label="Sum"
              onChange={[Function]}
            />
          </span>
        </Tooltip>
      </div>
      <div
        key="min"
      >
        <Tooltip>
          <span>
            <Switch
              checked={false}
              disabled={false}
              label="Minimum"
              onChange={[Function]}
            />
          </span>
        </Tooltip>
      </div>
      <div
        key="avg"
      >
        <Tooltip>
          <span>
            <Switch
              checked={false}
              disabled={false}
              label="Average"
              onChange={[Function]}
            />
          </span>
        </Tooltip>
      </div>
      <div
        key="median"
      >
        <Tooltip>
          <span>
            <Switch
              checked={true}
              disabled={true}
              label="Median"
              onChange={[Function]}
            />
          </span>
        </Tooltip>
      </div>
      <div
        key="max"
      >
        <Tooltip>
          <span>
            <Switch
              checked={false}
              disabled={false}
              label="Maximum"
              onChange={[Function]}
            />
          </span>
        </Tooltip>
      </div>
    </fieldset>
  </Form>
</Popover>
`;

exports[`should render nothing if the current result is no duration and the view is not variable 1`] = `""`;
